// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when the list already exist should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          class="input"
          data-testid="name"
          name="name"
          value="list name"
        />
      </div>
      <p
        class="help is-danger"
        data-testid="nameErrors"
      />
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="isQuickList"
      >
        Is Quick List
      </label>
      <div
        class="control"
      >
        <input
          checked=""
          data-testid="isQuickList"
          name="isQuickList"
          type="checkbox"
          value="true"
        />
      </div>
    </div>
    <div>
      <div
        class="is-flex"
      >
        <div
          class="is-flex-grow-4"
        >
          <span
            class="label"
          >
            List Items
          </span>
        </div>
      </div>
      <div
        class="dnd-container"
      >
        <div
          class="list-button mt-2 mb-2"
        >
          <button
            class="button is-small"
            data-testid="addNew"
            type="button"
          >
            <span
              class="icon is-small"
            >
              <i
                class="fas fa-plus"
              />
            </span>
            <span>
              Add
            </span>
          </button>
        </div>
        <div
          class="dnd-list"
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="2"
        >
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            class="is-flex dnd-item p-2 mb-2"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="5"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="5"
            data-testid="draggable5"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <a
              class="is-flex-grow-4"
              data-testid="editListItem5"
              href="/lists/2/items/5/edit"
            >
              <div>
                <span
                  class="has-text-black"
                >
                  item 5 title
                </span>
              </div>
            </a>
            <div
              class="is-justify-content-flex-end"
            >
              <center>
                <a
                  class="has-text-black delete"
                  data-testid="deleteListItem5"
                  href="/lists/2/items/5/delete"
                />
              </center>
            </div>
          </div>
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            class="is-flex dnd-item p-2 mb-2"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="6"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="6"
            data-testid="draggable6"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <a
              class="is-flex-grow-4"
              data-testid="editListItem6"
              href="/lists/2/items/6/edit"
            >
              <div>
                <span
                  class="has-text-black"
                >
                  item 6 title
                </span>
              </div>
            </a>
            <div
              class="is-justify-content-flex-end"
            >
              <center>
                <a
                  class="has-text-black delete"
                  data-testid="deleteListItem6"
                  href="/lists/2/items/6/delete"
                />
              </center>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="field is-grouped"
    >
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          SAVE
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="read"
          type="button"
        >
          READ
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </div>
      <div
        class="control ml-auto is-pulled-right"
      >
        <button
          class="button is-danger"
          data-testid="delete"
          type="button"
        >
          DELETE
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`when the list is new should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          class="input"
          data-testid="name"
          name="name"
          value=""
        />
      </div>
      <p
        class="help is-danger"
        data-testid="nameErrors"
      />
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="isQuickList"
      >
        Is Quick List
      </label>
      <div
        class="control"
      >
        <input
          data-testid="isQuickList"
          name="isQuickList"
          type="checkbox"
          value="false"
        />
      </div>
    </div>
    <div
      class="field is-grouped"
    >
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          CREATE
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
